# rapiddb

./: .dangerously-publish.sh  .dangerously-release.sh  .dockerignore  .env-example  .gitignore  .rustfmt.toml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile-devel  Dockerfile-rm  README.md  bench.sh  build-bench.sh  data_0.db  devel.sh  prepare_release.sh  release.sh  rust-toolchain.toml
.cargo/: config.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: cd.yml  ci.yml  docker-publish.yml  docker.yml  rust.yml
docs/: dockerhub-README.md  dockerhub.md  install-README.md  install.md
examples/: Cargo.toml  bench-mmav.rs  bench-rm.rs  init.rs  only-db.rs
rapiddb/: Cargo.toml  README.md
rapiddb-web/: Cargo.toml
rapiddb-web/src/: lib.rs  main.rs
rapiddb-web/src/api/: api_endpoint.rs  helpers.rs  mod.rs
rapiddb-web/src/api/v0/: api.rs  mod.rs  sensor.rs  sensor_aggregates.rs  sensor_latest.rs  sensor_latest_limit.rs  sensor_meta.rs  sensor_range.rs  sensor_single.rs  sensors.rs  sensors_aggregates.rs  sensors_latest.rs  sensors_latest_limit.rs  sensors_meta.rs
rapiddb/src/: lib.rs  main.rs
rapiddb/src/api/: api_endpoint.rs  helpers.rs  mod.rs
rapiddb/src/api/v0/: api.rs  mod.rs  sensor.rs  sensor_aggregates.rs  sensor_latest.rs  sensor_latest_limit.rs  sensor_meta.rs  sensor_range.rs  sensor_single.rs  sensors.rs  sensors_aggregates.rs  sensors_latest.rs  sensors_latest_limit.rs  sensors_meta.rs
rapiddb/src/db/: database_test_factory.rs  memory_mapped_hash_map.rs  memory_mapped_log_structured_hash_table.rs  mmav.rs  mmav_database.rs  mmav_unit.rs  mod.rs  redis_mysql_database.rs
rapiddb/src/db/mmav/: mmav.rs  mmav_async_database.rs  mmav_database.rs  mod.rs
rapiddb/src/db/mmav_db/: mmav.rs  mmav_async_database.rs  mmav_database.rs  mmav_unit.rs  mod.rs
rapiddb/src/db/mmhm_db/: mod.rs
rapiddb/src/db/mmlsht_db/: mod.rs
rapiddb/src/errors/: mmav_error.rs  mod.rs
rapiddb/src/traits/: i_async_database.rs  idatabase.rs  mod.rs
rapiddb/src/types/: mod.rs
tooling/: Dockerfile  Dockerfile-mmav  bench.sh  ci.sh  cliff.toml  git-cliff-detailed.toml  prepare_release.sh  wrk.lua
