[package]
name = "rapiddb-web"
version = "0.1.22" # prepare_release.sh
publish = true
edition = "2021"
license = "AGPL-3.0"
readme = "../README.md"
repository = "https://github.com/kruserr/rapiddb/"
description = "A reasonably fast configurable embedded key-value sensor database"
keywords = ["database", "embedded-database", "db", "persistence", "key-value"]
categories = ["database", "database-implementations", "caching"]

[dependencies]
rapiddb = { version = "0.1", path = "../rapiddb" }

tokio = { version = "1", features = ["full"] }
warp = "0.3"
serde = "1.0"
serde_json = "1.0"

[lib]
#doctest = false
