[package]
name = "rapiddb"
version = "0.1.20" # prepare_release.sh
publish = false
edition = "2021"
license = "AGPL-3.0"
readme = "../README.md"
repository = "https://github.com/kruserr/rapiddb/"
description = "A reasonably fast configurable embedded key-value sensor database"
keywords = ["database", "embedded-database", "db", "persistence", "key-value"]
categories = ["database", "database-implementations", "caching"]

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3"
serde = "1.0"
memmap2 = "0.9"
serde_json = "1.0"
async-trait = "0.1"
tokio-test = "0.4"

[lib]
#doctest = false
